# slint_demo

./: Cargo.toml  README  build.rs
.cargo/: config.toml
assets/: gb2312.BDF
src/: epd.rs  lcd.rs  main.rs  my_platform.rs
ui/: appwindow.slint
