[package]
name = "slint_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3 = { version = "0.18.0", optional = true }
hal = { package = "esp32c3-hal", version = "0.9.0", optional = true}
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] , optional = true}
esp-println       = { version = "0.7.1", features = ["esp32c3"], optional = true }
embedded-graphics = {version= "0.8.1",features = ["fixed"] , optional = true}
embedded-hal = {version = "0.2.7", optional = true }
slint = { version = "1.0.0", default-features = false, features = ["compat-1-0"] }
embedded-alloc = { version = "0.5", optional = true }
fugit = { version = "0.3.6", optional = true }
shared-bus = { version = "0.3.1", optional = true }
[build-dependencies]
slint-build = { version = "1.0.0" }



[features]
simulator = ["slint/renderer-winit-software", "slint/backend-winit" ]
esp = [
    "slint/unsafe-single-threaded",
    "slint/libm",
    "esp32c3",
    "hal",
    "embedded-hal",
    "embedded-alloc",
    "esp-println",
    "esp-backtrace",
    "embedded-graphics",
    "fugit",
    "shared-bus"
]